# rSoccer

./: .gitignore  README.md  pyproject.toml  requirements.txt  tuner_experiment.py
src/cleanrl/: c51.py  c51_jax.py  ddpg_continuous_action.py  ddpg_continuous_action_jax.py  dqn.py  dqn_jax.py  ppo_continuous_action.py  rpo_continuous_action.py  sac_continuous_action.py  td3_continuous_action.py  td3_continuous_action_jax.py
src/cleanrl_utils/: tuner.py
src/cleanrl_utils/evals/: __init__.py  ddpg_jax_eval.py  td3_jax_eval.py
src/rsoccer_gym/: __init__.py
src/rsoccer_gym/Simulators/: rsim.py
src/rsoccer_gym/ssl/: README.md
src/rsoccer_gym/ssl/ssl_hw_challenge/: go_to_ball.py
